objects/Solution.object
<CustomObject>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6785: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLicense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6785 Solution to which this license is associated with. Anybody with this license gets access to the solutions in this solution in the customer portal.</description>
        <inlineHelpText>Solution to which this license is associated with. Anybody with this license gets access to the solutions in this solution in the customer portal.</inlineHelpText>
        <label>Product License</label>
        <referenceTo>ProductLicense__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopLevelCategory__c</fullName>
        <description>SFDC1-7972 Solutions top-level category. Populated via trigger</description>
        <inlineHelpText>Solutions top-level category.</inlineHelpText>
        <label>Top Level Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>SFDC1-7972 Type of Solution</description>
        <inlineHelpText>Type of Solution</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Glossary</fullName>
                </value>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Methodology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
</CustomObject>